--- a/app-TFG/package.json
+++ b/app-TFG/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@types/lodash": "^4.14.191",
+    "bootstrap": "^5.3.0",
     "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
